Lugar de nacimiento

--- a/pagina.html
+++ b/pagina.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <label>Dario</label>
+    <label>Dario - Nací en León</label>
     <p>Rubén</p>
     <p>Aarón - Nací en GDL</p>
     <p>Pedro</p>
