Lugar de Nacimiento

--- a/pagina.html
+++ b/pagina.html
@@ -10,7 +10,7 @@
     <label>Dario</label>
     <p>Rubén</p>
     <p>Aarón - Nací en GDL</p>
-    <p>Pedro</p>
+    <p>Pedro - Nací en GTO</p>
     <h1>ERICK</h1>
 </body>
 </html>
